unpackaged/main/default/objects/Clear_Code_Mapping__mdt/Clear_Code_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Clear Code Mapping</label>
    <pluralLabel>Clear Code Mappings</pluralLabel>
</CustomObject>