unpackaged/main/default/objects/Clear_Code_Mapping__mdt/fields/Charge_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Charge_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Entitlement</label>
    <type>Checkbox</type>
</CustomField>