unpackaged/main/default/objects/Clear_Code_Mapping__mdt/fields/Fleet_Base_Pay_Percent__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Base_Pay_Percent__c</fullName>
    <label>Fleet Base Pay Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>