unpackaged/main/default/objects/Clear_Code_Mapping__mdt/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Base_Pay_Percent__c</columns>
    <columns>Charge_Entitlement__c</columns>
    <columns>Club__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
    <language>en_US</language>
</ListView>