unpackaged/main/default/objects/Clear_Code_Mapping__mdt/listViews/NE.listView-meta.xml
<ListView>
    <fullName>NE</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Base_Pay_Percent__c</columns>
    <columns>Fleet_Base_Pay_Percent__c</columns>
    <columns>Charge_Entitlement__c</columns>
    <columns>Club__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Club__c</field>
        <operation>equals</operation>
        <value>NE</value>
    </filters>
    <label>NE</label>
    <language>en_US</language>
</ListView>